--- a/presentation_report/literature/bibSTA490.bib
+++ b/presentation_report/literature/bibSTA490.bib
@@ -311,4 +311,14 @@ abstract = {Abstract In many medical applications, interpretable models with hig
 year = {2023}
 }
 
+@Manual{comets,
+  title        = {comets: Covariance Measure Tests for Conditional Independence},
+  author       = {Lucas Kook},
+  year         = {2024},
+  note         = {R package version 0.1-1},
+  url          = {https://github.com/LucasKook/comets},
+  urldate      = {2025-07-08}
+}
+
+
 
