--- a/presentation_report/thesis/chapter_Exp4.tex
+++ b/presentation_report/thesis/chapter_Exp4.tex
@@ -90,7 +90,7 @@ Once the TRAM-DAG model is fitted on observed data, we can access the inverse tr
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.6\textwidth]{img/potential_outcomes_y.png}
-\caption{ITE estimation in terms of quantile treatment effect (QTE) at the median with TRAM-DAGs. The two transformation functions represent the distributions of the potential outcomes under both treatments. For the QTE(0.5), the median of the latent distribution (0 for the standard logistic) is evaluated on both transformation functions to determine the median potential outcomes. We define the ITE for an individual as the difference of the median potential outcomes.}
+\caption{ITE estimation in terms of quantile treatment effect (QTE) at the median with TRAM-DAGs. The two transformation functions represent the distributions of the potential outcomes under both treatments. For the QTE(0.5), the median of the latent distribution (0 for the standard logistic) is evaluated on both transformation functions to determine the median potential outcomes. We define the ITE for an individual as the difference of the median potential outcomes. Plot adapted from visualizations similar to those used in \citet{sick2025}.}
 \label{fig:exp4_potential_outcomes}
 \end{figure}
 
