--- a/presentation_report/thesis/chapter01.tex
+++ b/presentation_report/thesis/chapter01.tex
@@ -44,7 +44,7 @@ These two motivations -- causal inference from observational data and the estima
 
 
 % Visual examples of these levels are presented in Figure~\ref{fig:pearl_levels}(a)--(c). redundant, later i refer to it again
-Questions in causal inference are typically classified into one of the three levels of Pearl's hierarchy of causation \citep{pearl_book2009}. Level 1 corresponds to observational queries, expressed as conditional probabilities $\text{P}(Y \mid X)$, which can be answered directly from the joint distribution $\text{P}(Y \cap X)$. Level 2 involves interventional queries, such as $\text{P}(Y \mid \text{do}(X = \alpha))$, which describe the probability when intervening on a variable $X$ and setting it to a particular value. Level 3 addresses counterfactual reasoning. These are hypothetical what-if questions that require reasoning about outcomes under alternative realities. For example, if a patient received a treatment and died, the factual outcome is death under the received treatment. The counterfactual would be the outcome that would have occurred had the patient received a different treatment.
+Questions in causal inference are typically classified into one of the three levels of Pearl's hierarchy of causation \citep{pearl_book2009}. Level 1 corresponds to observational queries, expressed as conditional probabilities $P(Y \mid X)$, which can be answered directly from the joint distribution $P(Y \cap X)$. Level 2 involves interventional queries, such as $P(Y \mid \text{do}(X = \alpha))$, which describe the probability when intervening on a variable $X$ and setting it to a particular value. Level 3 addresses counterfactual reasoning. These are hypothetical what-if questions that require reasoning about outcomes under alternative realities. For example, if a patient received a treatment and died, the factual outcome is death under the received treatment. The counterfactual would be the outcome that would have occurred had the patient received a different treatment.
 
  
 % Some statisticians argue that counterfactuals -- being unobservable and untestable -- are of limited scientific value and may be regarded as metaphysical \citep{dawid2000}. Nevertheless, there are important practical questions that require the analysis of such counterfactuals.
@@ -108,7 +108,7 @@ While DAGs capture the structure of these dependencies, structural causal models
 
 Each function $f_i$ -- which may be nonlinear -- defines how the value of $X_i$ is generated from its parents and the corresponding noise term. A source node $X_j$ without any parents is modeled as $X_j = f_j(Z_j)$. Once all structural equations and noise variables are specified, the model is fully deterministic in the sense that each variable is a fixed function of its parents and its own exogenous noise. The randomness in the system arises entirely from these independent noise terms. This functional representation makes it possible to compute interventional distributions and evaluate counterfactual outcomes. These aspects are discussed in detail in Section~\ref{methods:sampling}.
 
-In this thesis, we do not focus on discovering the underlying causal graph. Such a structure may be obtained through structure learning algorithms (see e.g., \citealp{zheng2018}) or determined from expert knowledge. Instead, we assume the graph is known and concentrate on estimating the functional form of the relationships between variables -- that is, the structural equations that define the SCM.
+In this thesis, we do not focus on discovering the underlying causal graph. Such a structure may be obtained through structure learning algorithms (see e.g., \citealp{zheng2018}) or determined from expert knowledge. Instead, we assume the graph is known and fully observed, and concentrate on estimating the functional form of the relationships between variables -- that is, the structural equations that define the SCM.
 
 Various approaches exist for estimating the functions $f_i$ that constitute an SCM, depending on the assumptions made about the data and the model class.
 
@@ -136,23 +136,23 @@ The TRAM-DAG framework proposed by \citet{sick2025} builds a bridge between thes
 
 \section{Goals and contributions} \label{sec:goals_contributions}
 
-The first part of this thesis focuses on the TRAM-DAG framework. In particular, we apply the model to DAGs of varying complexity, extend it from continuous to ordinal and categorical predictors, examine how variable scaling affects the interpretation of coefficients, and make use of different neural network configurations (e.g., activation functions, batch normalization, dropout). Most analyses are conducted on simulated data, where the underlying data-generating process is known, but the model is also applied to real-world data to demonstrate its practical utility.
+The first part of this thesis focuses on the TRAM-DAG framework. In particular, we apply the model to DAGs of varying complexity, extend it from continuous to ordinal and categorical predictors (see Section~\ref{sec:encoding_discrete_variables}), examine how variable scaling affects the interpretation of coefficients (see Section~\ref{sec:scaling_continuous_variables}), and make use of different neural network configurations (e.g., activation functions, batch normalization, dropout). Most analyses are conducted on simulated data, where the underlying data-generating process is known (see Sections~\ref{ch:exp1} and~\ref{ch:exp4}), but the model is also applied to real-world data to demonstrate its practical utility (see Section~\ref{ch:exp2}).
 
-The second focus of the thesis is the estimation of individualized treatment effects (ITEs). Recent work by \citet{chen2025} showed that most causal machine learning models trained on RCT data failed to generalize when evaluated out of sample. We replicate part of their study by applying various models they used, as well as TRAM-DAGs, to the same data and analyze whether we reach similar conclusions. We further investigate why ITE estimation may fail in such settings and under which conditions reliable estimates can be obtained. In addition, we demonstrate that TRAM-DAGs can be effectively used to estimate ITEs also in complex, non-randomized observational settings, provided the causal graph is known and fully observed. In doing so, we explore the potential of TRAM-DAGs as a framework for answering causal questions across different levels of Pearl's hierarchy.
+The second focus of the thesis is the estimation of individualized treatment effects (ITEs). Recent work by \citet{chen2025} showed that most causal machine learning models trained on RCT data failed to generalize when evaluated out of sample. We replicate part of their study by applying various models they used, as well as TRAM-DAGs, to the same data and analyze whether we reach similar conclusions (see Section~\ref{ch:exp2}). We further investigate why ITE estimation may fail in such settings and under which conditions reliable estimates can be obtained (see Section~\ref{ch:experiment3}). In addition, we demonstrate that TRAM-DAGs can be effectively used to estimate ITEs also in complex, non-randomized observational settings, provided the causal graph is known and fully observed (see Section~\ref{ch:exp4}). In doing so, we explore the potential of TRAM-DAGs as a framework for answering causal questions across different levels of Pearl's hierarchy.
 
 \medskip
 
 Formally, we aim to answer the following research questions in this thesis:
 
 \begin{itemize}
-    \item How can TRAM-DAGs be applied to estimate causal relationships across different scenarios, and subsequently be used to sample from observational, interventional, and counterfactual distributions? Using synthetic data, we demonstrate how the model can be applied and explain how to handle ordinal and categorical predictors, how variable scaling affects the interpretation of coefficients, and how interactions between variables can be modeled.
+    \item How can TRAM-DAGs be applied to estimate causal relationships across different scenarios, and subsequently be used to sample from observational, interventional, and counterfactual distributions? Using synthetic data, we demonstrate how the model can be applied (Section~\ref{ch:exp1}) and explain how to handle ordinal and categorical predictors (Section~\ref{sec:encoding_discrete_variables}), how variable scaling affects the interpretation of coefficients (Section~\ref{sec:scaling_continuous_variables}), and how interactions between variables can be modeled (Section~\ref{sec:complex_shift}).
 
     
-    \item Do we reach similar conclusions as \citet{chen2025} when applying their models, as well as TRAM-DAGs, to the International Stroke Trial (IST) dataset for ITE estimation? Specifically, we examine whether ITEs estimated on the training data fail to generalize to the test data.
+    \item Do we reach similar conclusions as \citet{chen2025} when applying their models, as well as TRAM-DAGs, to the International Stroke Trial (IST) dataset for ITE estimation? Specifically, we examine whether ITEs estimated on the training data fail to generalize to the test data (Section~\ref{ch:exp2}).
 
-    \item What factors contribute to the failure of ITE estimation in causal machine learning models, and under which conditions can reliable estimates be obtained? We investigate this by applying various models across simulated scenarios that differ in observed variables and treatment effect size.
+    \item What factors contribute to the failure of ITE estimation in causal machine learning models, and under which conditions can reliable estimates be obtained? We investigate this by applying various models across simulated scenarios that differ in observed variables and treatment effect size (Section~\ref{ch:experiment3}).
 
-    \item Can TRAM-DAGs provide unbiased estimates of ITEs when the causal graph is fully observed? We evaluate this in a complex simulation setting with a continuous outcome, comparing both randomized and confounded designs.
+    \item Can TRAM-DAGs provide unbiased estimates of ITEs when the causal graph is fully observed? We evaluate this in a complex simulation setting with a continuous outcome, comparing both randomized and confounded designs (Section~\ref{ch:exp4}).
 \end{itemize}
 
 
